# docs/swagger.json
@@ -13,6 +13,29 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/country": {
+            "get": {
+                "description": "Get countries of users",
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Get countries of users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.countryResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "list of all users",
@@ -75,6 +98,17 @@
         }
     },
     "definitions": {
+        "handlers.countryResponse": {
+            "type": "object",
+            "properties": {
+                "countries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Country"
+                    }
+                }
+            }
+        },
         "handlers.errResponse": {
             "type": "object",
             "properties": {
@@ -91,6 +125,14 @@
                     "items": {
                         "$ref": "#/definitions/models.User"
                     }
+                }
+            }
+        },
+        "models.Country": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
                 }
             }
         },
